--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,18 @@ android {
     buildFeatures {
         viewBinding true
     }
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
+    }
+
     defaultConfig {
         applicationId "com.libdumper"
-        minSdkVersion 23
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 3
-        versionName '3.2'
+        versionName '3.5'
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a"
         }
@@ -45,9 +51,4 @@ repositories {
 dependencies {
     implementation "com.github.topjohnwu.libsu:core:3.1.2"
     implementation "com.github.topjohnwu.libsu:service:3.1.2"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
