--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:extractNativeLibs="true"
         android:requestLegacyExternalStorage="true"
-        android:theme="@style/Theme.LibDumper">
+        android:theme="@android:style/Theme.Black">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
